tests/compile_fail/duplicate_name.dd
from serdde.macros import Serde


@derive(Serde)
class DuplicateName:
    value: i32

    @Serde(rename="value")
    other: i32
